[tool.poetry]
name = "REZD"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^1.5.18"
PodSixNet = "^0.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.9.3"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
